--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ Pygments = "^2.11.2"
 types-PyYAML = "^6.0.8"
 uvloop = "^0.16.0"
 types-python-slugify = "^6.1.0"
+more-itertools = "^8.14.0"
 
 [tool.isort]
 multi_line_output = 3
