--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ uvloop = "^0.16.0"
 types-python-slugify = "^6.1.0"
 more-itertools = "^8.14.0"
 yt-dlp = "^2022.8.8"
+beets = "^1.6.0"
 
 [tool.isort]
 multi_line_output = 3
@@ -68,7 +69,8 @@ safety = "^2.0.0"
 
 [tool.pyright]
 include = [
-    "musicbot"
+    "musicbot",
+    "tests"
 ]
 reportGeneralTypeIssues = false
 reportUnusedCallResult = true
