--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,8 @@ types-python-slugify = "^6.1.0"
 more-itertools = "^8.14.0"
 yt-dlp = "^2022.8.8"
 beets = "^1.6.0"
+natsort = "^8.1.0"
+PyICU = "^2.9"
 
 [tool.isort]
 multi_line_output = 3
