--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "musicbot"
-version = "0.8.0"
+version = "0.9.0"
 description = "Music swiss army knife"
 authors = ["Adrien Pensart <crunchengine@gmail.com>"]
 maintainers = ["Adrien Pensart <crunchengine@gmail.com>"]
@@ -16,7 +16,6 @@ musicbot = 'musicbot.main:main'
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
-logging-tree = "^1.8"
 pyacoustid = "^1.1"
 python-vlc = "^3.0"
 prompt_toolkit = "^3.0.2"
@@ -37,7 +36,6 @@ beartype = "^0.10.0"
 humanize = "^4.0.0"
 python-slugify = "^6.0.1"
 edgedb = "^0.24.0"
-pyright = "^1.1.248"
 Pygments = "^2.11.2"
 types-PyYAML = "^6.0.8"
 uvloop = "^0.17.0"
@@ -51,7 +49,8 @@ PyICU = "^2.9"
 [tool.isort]
 multi_line_output = 3
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+pyright = "^1.1.272"
 coverage-badge = "^1.0"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
