--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ yt-dlp = "^2022.8.8"
 beets = "^1.6.0"
 natsort = "^8.1.0"
 PyICU = "^2.9"
+orjson = "^3.8.0"
 
 [tool.isort]
 multi_line_output = 3
@@ -57,10 +58,10 @@ bump2version = "^1.0.0"
 pylint = "^2.14.1"
 pytest-docker-compose = "^3.1.2"
 docker = { version = "^6.0", markers = "sys_platform != 'win32'" }
-pytest-cov = "^3.0.0"
+pytest-cov = "^4.0.0"
 pytest-timeout = "^2.0.1"
 flake8 = "^5.0.0"
-mypy = "^0.971"
+mypy = "^0.981"
 pytest-click = "^1.0.2"
 isort = "^5.10.1"
 bandit = "^1.7.2"
