--- a/mypy.ini
+++ b/mypy.ini
@@ -12,3 +12,6 @@ warn_redundant_casts = true
 warn_unused_configs = true
 warn_unreachable = true
 warn_no_return = true
+
+[mypy-mutagen.*]
+implicit_reexport = true
