--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ build-backend = "poetry.core.masonry.api"
 musicbot = 'musicbot.main:main'
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
+python = ">=3.11,<4.0"
 pyacoustid = "^1.1"
 python-vlc = "^3.0"
 prompt_toolkit = "^3.0.2"
@@ -35,12 +35,12 @@ click-skeleton = "^0.26"
 beartype = "^0.10.0"
 humanize = "^4.0.0"
 python-slugify = "^6.0.1"
-edgedb = "^0.24.0"
+edgedb = "^1.0.0"
 Pygments = "^2.11.2"
 types-PyYAML = "^6.0.8"
 uvloop = "^0.17.0"
 types-python-slugify = "^6.1.0"
-more-itertools = "^8.14.0"
+more-itertools = "^9.0.0"
 yt-dlp = "^2022.8.8"
 beets = "^1.6.0"
 natsort = "^8.1.0"
@@ -66,7 +66,7 @@ pytest-click = "^1.0.2"
 isort = "^5.10.1"
 bandit = "^1.7.2"
 vulture = "^2.3"
-pytest-asyncio = "^0.19.0"
+pytest-asyncio = "^0.20.0"
 safety = "^2.0.0"
 
 [tool.pyright]
@@ -75,6 +75,7 @@ include = [
     "tests"
 ]
 reportGeneralTypeIssues = false
+reportPrivateImportUsage = false
 reportUnusedCallResult = true
 
 [tool.pytest.ini_options]
