--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,20 +26,20 @@ watchdog = "^2.0.2"
 pydub = "^0.25.1"
 fuzzywuzzy = "^0.18.0"
 python-Levenshtein = "^0.20.5"
-attrs = "^21.4.0"
+attrs = "^22.0.0"
 types-requests = "^2.25.0"
 colorlog = "^6.4.1"
 progressbar2 = "^4.0.0"
 rich = "^12.0.0"
 click-skeleton = "^0.26"
-beartype = "^0.10.0"
+beartype = "^0.11.0"
 humanize = "^4.0.0"
-python-slugify = "^6.0.1"
+python-slugify = "^7.0.0"
 edgedb = "^1.0.0"
 Pygments = "^2.11.2"
 types-PyYAML = "^6.0.8"
 uvloop = "^0.17.0"
-types-python-slugify = "^6.1.0"
+types-python-slugify = "^7.0.0"
 more-itertools = "^9.0.0"
 yt-dlp = "^2022.8.8"
 beets = "^1.6.0"
@@ -60,8 +60,8 @@ pytest-docker-compose = "^3.1.2"
 docker = { version = "^6.0", markers = "sys_platform != 'win32'" }
 pytest-cov = "^4.0.0"
 pytest-timeout = "^2.0.1"
-flake8 = "^5.0.0"
-mypy = "^0.982"
+flake8 = "^6.0.0"
+mypy = "<1.0"
 pytest-click = "^1.0.2"
 isort = "^5.10.1"
 bandit = "^1.7.2"
