--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ watchdog = "^2.0.2"
 pydub = "^0.25.1"
 fuzzywuzzy = "^0.18.0"
 python-Levenshtein = "^0.20.5"
-attrs = "^22.0.0"
+attrs = "21.4.0"
 types-requests = "^2.25.0"
 colorlog = "^6.4.1"
 progressbar2 = "^4.0.0"
