--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3'
 services:
   edgedb:
-    image: "edgedb/edgedb:2.0"
+    image: "edgedb/edgedb:latest"
     restart: always
     ports:
       - 127.0.0.1:15656:5656
