--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ watchdog = "^2.0.2"
 pydub = "^0.25.1"
 fuzzywuzzy = "^0.18.0"
 python-Levenshtein = "^0.20.5"
-attrs = "21.4.0"
+attrs = "^22.2.0"
 types-requests = "^2.25.0"
 colorlog = "^6.4.1"
 progressbar2 = "^4.0.0"
@@ -50,6 +50,9 @@ orjson = "^3.8.0"
 [tool.isort]
 multi_line_output = 3
 
+[tool.ruff]
+ignore = ["E501"]
+
 [tool.poetry.group.dev.dependencies]
 pyright = "^1.1.272"
 coverage-badge = "^1.0"
@@ -68,6 +71,7 @@ bandit = "^1.7.2"
 vulture = "^2.3"
 pytest-asyncio = "^0.20.0"
 safety = "^2.0.0"
+ruff = "^0.0.190"
 
 [tool.pyright]
 include = [
