--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ docker = { version = "^6.0", markers = "sys_platform != 'win32'" }
 pytest-cov = "^4.0.0"
 pytest-timeout = "^2.0.1"
 flake8 = "^6.0.0"
-mypy = "<1.0"
+mypy = "^1.0"
 pytest-click = "^1.0.2"
 isort = "^5.10.1"
 bandit = "^1.7.2"
@@ -73,6 +73,7 @@ vulture = "^2.3"
 pytest-asyncio = "^0.20.0"
 safety = "^2.0.0"
 ruff = "<0.1"
+black = "^23.1.0"
 
 [tool.pyright]
 include = [
