--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,10 @@ orjson = "^3.8.0"
 ipython = "^8.7.0"
 
 [tool.isort]
-multi_line_output = 3
+profile = 'black'
+
+[tool.black]
+line-length = 180
 
 [tool.ruff]
 ignore = ["E501"]
