--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ prompt_toolkit = "^3.0.2"
 mutagen = "^1.44.0"
 requests = "^2.24.0"
 spotipy = "^2.16.0"
-watchdog = "^2.0.2"
 pydub = "^0.25.1"
 fuzzywuzzy = "^0.18.0"
 python-Levenshtein = "^0.20.5"
@@ -47,6 +46,8 @@ natsort = "^8.1.0"
 PyICU = "^2.9"
 orjson = "^3.8.0"
 ipython = "^8.7.0"
+async-lru = "^2.0.2"
+watchfiles = "^0.19.0"
 
 [tool.isort]
 profile = 'black'
@@ -71,10 +72,7 @@ flake8 = "^6.0.0"
 mypy = "^1.0"
 pytest-click = "^1.0.2"
 isort = "^5.10.1"
-bandit = "^1.7.2"
 vulture = "^2.3"
-pytest-asyncio = "^0.20.0"
-safety = "^2.0.0"
 ruff = "<0.1"
 black = "^23.1.0"
 
@@ -89,7 +87,7 @@ reportUnusedCallResult = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--asyncio-mode=strict --timeout 600 --cov-report term-missing --durations=0 --cov musicbot -x --use-running-containers --docker-compose-no-build "
+addopts = "--timeout 600 --cov-report term-missing --durations=0 --cov musicbot -x --use-running-containers --docker-compose-no-build "
 log_cli = true
 
 [tool.pylint.master]
