--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ orjson = "^3.8.0"
 ipython = "^8.7.0"
 async-lru = "^2.0.2"
 watchfiles = "^0.19.0"
+textual = {extras = ["dev"], version = "^0.18.0"}
 
 [tool.isort]
 profile = 'black'
