--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,8 @@ orjson = "^3.8.0"
 ipython = "^8.7.0"
 async-lru = "^2.0.2"
 watchfiles = "^0.19.0"
-textual = {extras = ["dev"], version = "^0.24.1"}
+textual = {extras = ["dev"], version = "^0.28.0"}
+methodtools = "^0.4.7"
 
 [tool.isort]
 profile = 'black'
@@ -70,11 +71,11 @@ pytest-cov = "^4.0.0"
 pytest-timeout = "^2.0.1"
 flake8 = "^6.0.0"
 mypy = "^1.0"
-pytest-click = "^1.0.2"
 isort = "^5.10.1"
 vulture = "^2.3"
 ruff = "<0.1"
 black = "^23.1.0"
+pgcli = "^3.5.0"
 
 [tool.pyright]
 include = [
@@ -120,5 +121,8 @@ module = [
 implicit_reexport = true
 
 [[tool.mypy.overrides]]
-module = "IPython"
+module = [
+    "IPython",
+    "methodtools"
+]
 ignore_missing_imports = true
