--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,9 @@ orjson = "^3.8.0"
 ipython = "^8.7.0"
 async-lru = "^2.0.2"
 watchfiles = "^0.19.0"
-textual = {extras = ["dev"], version = "^0.28.0"}
+textual = "^0.29.0"
 methodtools = "^0.4.7"
+click = "8.1.3"
 
 [tool.isort]
 profile = 'black'
@@ -76,6 +77,7 @@ vulture = "^2.3"
 ruff = "<0.1"
 black = "^23.1.0"
 pgcli = "^3.5.0"
+textual-dev = "^1.0.1"
 
 [tool.pyright]
 include = [
