--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,14 +31,14 @@ colorlog = "^6.4.1"
 progressbar2 = "^4.0.0"
 rich = "^13.0.0"
 click-skeleton = "^0.28.1"
-beartype = "^0.14.0"
+beartype = "^0.15.0"
 humanize = "^4.0.0"
 python-slugify = "^8.0.0"
 edgedb = "^1.0.0"
 Pygments = "^2.11.2"
 types-PyYAML = "^6.0.8"
 types-python-slugify = "^8.0.0"
-more-itertools = "^9.0.0"
+more-itertools = "^10.0.0"
 yt-dlp = "^2023.1.2"
 beets = "^1.6.0"
 natsort = "^8.1.0"
@@ -47,9 +47,9 @@ orjson = "^3.8.0"
 ipython = "^8.7.0"
 async-lru = "^2.0.2"
 watchfiles = "^0.19.0"
-textual = "^0.29.0"
+textual = "^0.30.0"
 methodtools = "^0.4.7"
-click = "8.1.3"
+click = "^8.1.6"
 
 [tool.isort]
 profile = 'black'
