--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 musicbot = 'musicbot.main:main'
+pgcli = 'pgcli.main:cli'
 
 [tool.poetry.dependencies]
 python = ">=3.11,<4.0"
@@ -46,6 +47,8 @@ watchfiles = "^0.19.0"
 textual = "^0.32.0"
 methodtools = "^0.4.7"
 click = "^8.1.6"
+httpx = "^0.24.1"
+pgcli = "^3.5.0"
 
 [tool.isort]
 profile = 'black'
@@ -123,6 +126,7 @@ implicit_reexport = true
 [[tool.mypy.overrides]]
 module = [
     "IPython",
-    "methodtools"
+    "methodtools",
+    "pgcli.*",
 ]
 ignore_missing_imports = true
