--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,13 @@ PyICU = "^2.9"
 orjson = "^3.8.0"
 ipython = "^8.7.0"
 async-lru = "^2.0.2"
-watchfiles = "^0.19.0"
-textual = "^0.32.0"
+watchfiles = "^0.20.0"
+textual = "^0.35.0"
 methodtools = "^0.4.7"
 click = "^8.1.6"
 httpx = "^0.24.1"
 pgcli = "^3.5.0"
+ruamel-yaml = "^0.17.21"
 
 [tool.isort]
 profile = 'black'
@@ -65,8 +66,6 @@ coverage-badge = "^1.0"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
 pylint = "^2.14.1"
-pytest-docker-compose = "^3.1.2"
-docker = { version = "^6.0", markers = "sys_platform != 'win32'" }
 pytest-cov = "^4.0.0"
 pytest-timeout = "^2.0.1"
 flake8 = "^6.0.0"
@@ -77,7 +76,6 @@ ruff = "<0.1"
 black = "^23.1.0"
 textual-dev = "^1.1.0"
 types-requests = "^2.25.0"
-types-PyYAML = "^6.0.8"
 types-python-slugify = "^8.0.0"
 
 [tool.pyright]
@@ -91,7 +89,7 @@ reportUnusedCallResult = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--timeout 600 --cov-report term-missing --durations=0 --cov musicbot -x --use-running-containers --docker-compose-no-build "
+addopts = "--timeout 600 --cov-report term-missing --durations=0 --cov musicbot -x "
 log_cli = true
 
 [tool.pylint.master]
