--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ click = "^8.1.6"
 httpx = "^0.24.1"
 pgcli = "^3.5.0"
 ruamel-yaml = "^0.17.21"
+shazamio = "^0.4.0.1"
 
 [tool.isort]
 profile = 'black'
@@ -89,7 +90,7 @@ reportUnusedCallResult = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--timeout 600 --cov-report term-missing --durations=0 --cov musicbot -x "
+addopts = "--timeout 600 --cov-report term-missing --durations=0 --cov musicbot "
 log_cli = true
 
 [tool.pylint.master]
