--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ httpx = "^0.24.1"
 pgcli = "^3.5.0"
 ruamel-yaml = "^0.17.21"
 shazamio = "^0.4.0.1"
+psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}
 
 [tool.isort]
 profile = 'black'
