--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,13 +25,13 @@ requests = "^2.24.0"
 spotipy = "^2.16.0"
 pydub = "^0.25.1"
 fuzzywuzzy = "^0.18.0"
-python-Levenshtein = "^0.21.0"
+python-levenshtein = "^0.23.0"
 attrs = "^23.1.0"
 colorlog = "^6.4.1"
 progressbar2 = "^4.0.0"
 rich = "^13.0.0"
 click-skeleton = "^0.28.1"
-beartype = "^0.15.0"
+beartype = "^0.16.0"
 humanize = "^4.0.0"
 python-slugify = "^8.0.0"
 edgedb = "^1.0.0"
@@ -42,11 +42,11 @@ natsort = "^8.1.0"
 orjson = "^3.8.0"
 ipython = "^8.7.0"
 async-lru = "^2.0.2"
-watchfiles = "^0.20.0"
-textual = "^0.35.0"
+watchfiles = "^0.21.0"
+textual = "^0.40.0"
 methodtools = "^0.4.7"
 click = "^8.1.6"
-httpx = "^0.24.1"
+httpx = "^0.25.0"
 pgcli = "^3.5.0"
 ruamel-yaml = "^0.17.21"
 shazamio = "^0.4.0.1"
@@ -66,14 +66,14 @@ pyright = "^1.1.272"
 coverage-badge = "^1.0"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
-pylint = "^2.14.1"
+pylint = "^3.0"
 pytest-cov = "^4.0.0"
 pytest-timeout = "^2.0.1"
 flake8 = "^6.0.0"
 mypy = "^1.0"
 isort = "^5.10.1"
 vulture = "^2.3"
-ruff = "<0.1"
+ruff = "^0.1"
 black = "^23.1.0"
 textual-dev = "^1.1.0"
 types-requests = "^2.25.0"
