--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,31 @@
 ---
 version: '3'
 services:
-  edgedb:
-    image: "edgedb/edgedb:3.2"
+  musicbot_db_prod:
+    container_name: musicbot-db-prod
+    image: "edgedb/edgedb:4"
     restart: always
     ports:
-      - 127.0.0.1:15656:5656
+      - 5656:5656
     environment:
       EDGEDB_SERVER_SECURITY: insecure_dev_mode
       EDGEDB_SERVER_ADMIN_UI: enabled
+      EDGEDB_SERVER_TLS_CERT_MODE: generate_self_signed
     volumes:
       - "./dbschema:/dbschema"
       - "./credentials:/root/.config/edgedb/credentials"
+      - "./data:/var/lib/edgedb/data"
+  musicbot_db_test:
+    container_name: musicbot-db-test
+    image: "edgedb/edgedb:4"
+    restart: always
+    ports:
+      - 5657:5656
+    environment:
+      EDGEDB_SERVER_SECURITY: insecure_dev_mode
+      EDGEDB_SERVER_ADMIN_UI: enabled
+      EDGEDB_SERVER_USER: testuser
+      EDGEDB_SERVER_PASSWORD: testpass
+      EDGEDB_SERVER_TLS_CERT_MODE: generate_self_signed
+    volumes:
+      - "./dbschema:/dbschema"
