--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,12 +43,12 @@ orjson = "^3.8.0"
 ipython = "^8.7.0"
 async-lru = "^2.0.2"
 watchfiles = "^0.21.0"
-textual = "^0.40.0"
+textual = "<1.0"
 methodtools = "^0.4.7"
 click = "^8.1.6"
 httpx = "^0.25.0"
-pgcli = "^3.5.0"
-ruamel-yaml = "^0.17.21"
+pgcli = "^4.0.0"
+ruamel-yaml = "^0.18.0"
 shazamio = "^0.4.0.1"
 psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}
 
@@ -66,14 +66,14 @@ pyright = "^1.1.272"
 coverage-badge = "^1.0"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
-pylint = "^3.0"
+pylint = "^3.0.0"
 pytest-cov = "^4.0.0"
 pytest-timeout = "^2.0.1"
 flake8 = "^6.0.0"
 mypy = "^1.0"
 isort = "^5.10.1"
 vulture = "^2.3"
-ruff = "^0.1"
+ruff = "<1.0"
 black = "^23.1.0"
 textual-dev = "^1.1.0"
 types-requests = "^2.25.0"
@@ -90,7 +90,7 @@ reportUnusedCallResult = true
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--timeout 600 --cov-report term-missing --durations=0 --cov musicbot "
+addopts = "--ignore=data --timeout 600 --cov-report term-missing --durations=0 --cov musicbot "
 log_cli = true
 
 [tool.pylint.master]
