--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,11 @@ services:
     ports:
       - 5656:5656
     environment:
-      EDGEDB_SERVER_SECURITY: insecure_dev_mode
       EDGEDB_SERVER_ADMIN_UI: enabled
       EDGEDB_SERVER_TLS_CERT_MODE: generate_self_signed
+      EDGEDB_SERVER_USER: musicbot
+      EDGEDB_SERVER_PASSWORD: musicbot
+      EDGEDB_DOCKER_LOG_LEVEL: warning
     volumes:
       - "./dbschema:/dbschema"
       - "./credentials:/root/.config/edgedb/credentials"
