--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,11 @@ requests = "^2.24.0"
 spotipy = "^2.16.0"
 pydub = "^0.25.1"
 fuzzywuzzy = "^0.18.0"
-python-levenshtein = "^0.23.0"
-attrs = "^23.1.0"
+python-levenshtein = "^0.25.0"
 colorlog = "^6.4.1"
 rich = "^13.0.0"
-click-skeleton = "^0.29.0"
-beartype = "^0.16.0"
+click-skeleton = "^0.29.1"
+beartype = "^0.17.0"
 humanize = "^4.0.0"
 python-slugify = "^8.0.0"
 types-python-slugify = "^8.0.0"
@@ -41,12 +40,11 @@ ipython = "^8.7.0"
 async-lru = "^2.0.2"
 watchfiles = "^0.21.0"
 textual = "<1.0"
-methodtools = "^0.4.7"
 click = "^8.1.6"
-httpx = "^0.26.0"
+httpx = "^0.27.0"
 pgcli = "^4.0.0"
 ruamel-yaml = "^0.18.0"
-shazamio = "^0.4.0.1"
+shazamio = "^0.5"
 psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}
 pyacoustid = "^1.3.0"
 progressbar3 = "^4.3.4"
@@ -60,10 +58,10 @@ profile = 'black'
 line-length = 180
 
 [tool.ruff]
-ignore = ["E501"]
+lint.ignore = ["E501"]
 
 [tool.poetry.group.dev.dependencies]
-pyright = "^1.1.272"
+pyright = "^1.1.350"
 coverage-badge = "^1.0"
 restructuredtext_lint = "^1.3.0"
 bump2version = "^1.0.0"
@@ -75,7 +73,7 @@ mypy = "^1.0"
 isort = "^5.10.1"
 vulture = "^2.3"
 ruff = "<1.0"
-black = "^23.1.0"
+black = "^24.0.0"
 textual-dev = "^1.1.0"
 
 [tool.pyright]
@@ -125,7 +123,6 @@ implicit_reexport = true
 [[tool.mypy.overrides]]
 module = [
     "IPython",
-    "methodtools",
     "pgcli.*",
 ]
 ignore_missing_imports = true
