--- a/edgeproxy/Cargo.toml
+++ b/edgeproxy/Cargo.toml
@@ -7,16 +7,13 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["macros"] }
-salvo = { version = "0.65", features = ["proxy", "logging", "cache", "serve-static", "basic-auth"] }
+salvo = { version = "0.67", features = ["logging", "cache", "serve-static", "basic-auth"] }
 serde_json = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-hyper-util = { version = "0.1.2", features = ["full"] }
-hyper-tls = "0.6.0"
-native-tls = "0.2.11"
-hyper = "1.0.1"
-http-body-util = "0.1.0"
-tokio-native-tls = "0.3.1"
+# http-body-util = "0.1.0"
 thiserror = "1.0.53"
 clap = { version = "4.4.12", features = ["derive"] }
 humantime = "2.1.0"
+edgedb-tokio = "0.5.0"
+once_cell = "1.19.0"
