--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,18 +38,19 @@ natsort = "^8.1.0"
 orjson = "^3.8.0"
 ipython = "^8.7.0"
 async-lru = "^2.0.2"
-watchfiles = "^0.21.0"
+watchfiles = "^0.22.0"
 textual = "<1.0"
 click = "^8.1.6"
 httpx = "^0.27.0"
 pgcli = "^4.0.0"
 ruamel-yaml = "^0.18.0"
-shazamio = "^0.5"
+shazamio = "^0.6"
 psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}
 pyacoustid = "^1.3.0"
 progressbar3 = "^4.3.4"
 # progressbar2 = "^4.0.0"
 # progressbar2 = { git = "https://github.com/AdrienPensart/python-progressbar.git" }
+yaspin = "^3.0.2"
 
 [tool.isort]
 profile = 'black'
