--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,55 +1,55 @@
-[tool.poetry]
+[project]
 name = "musicbot"
-version = "0.9.0"
+version = "0.10.0"
 description = "Music swiss army knife"
-authors = ["Adrien Pensart <crunchengine@gmail.com>"]
-maintainers = ["Adrien Pensart <crunchengine@gmail.com>"]
-homepage = "https://github.com/AdrienPensart/musicbot"
+# authors = ["Adrien Pensart <crunchengine@gmail.com>"]
+# maintainers = ["Adrien Pensart <crunchengine@gmail.com>"]
+# homepage = "https://github.com/AdrienPensart/musicbot"
 license = "MIT"
+readme = "README.rst"
+requires-python = ">=3.11"
+dependencies = [
+    "async-lru>=2.0.4",
+    "beartype>=0.19.0",
+    "click>=8.1.7",
+    "click-skeleton>=0.30.1",
+    "colorlog>=6.8.2",
+    "edgedb>=2.1.0",
+    "fuzzywuzzy>=0.18.0",
+    "humanize>=4.11.0",
+    "ipython>=8.28.0",
+    "more-itertools>=10.5.0",
+    "mutagen>=1.47.0",
+    "natsort>=8.4.0",
+    "orjson>=3.10.7",
+    "pydub>=0.25.1",
+    "pygments>=2.18.0",
+    "python-levenshtein>=0.26.0",
+    "python-slugify>=8.0.4",
+    "requests>=2.32.3",
+    "rich>=13.9.2",
+    "spotipy>=2.24.0",
+    "textual>=0.83.0",
+    "watchfiles>=0.24.0",
+    "yt-dlp>=2024.10.7",
+    "httpx>=0.27.2",
+    "ruamel-yaml>=0.18.6",
+    "shazamio>=0.6.0",
+    "psycopg>=3.2.3",
+    "progressbar3>=4.3.4",
+    "yaspin>=3.1.0",
+    "pydantic-core>=2.24.2",
+    "pyacoustid>=1.3.0",
+    "pgcli>=4.1.0",
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.scripts]
+[project.scripts]
 musicbot = 'musicbot.main:main'
 pgcli = 'pgcli.main:cli'
-
-[tool.poetry.dependencies]
-python = ">=3.11,<4.0"
-mutagen = "^1.44.0"
-requests = "^2.24.0"
-spotipy = "^2.16.0"
-pydub = "^0.25.1"
-fuzzywuzzy = "^0.18.0"
-python-levenshtein = "^0.25.0"
-colorlog = "^6.4.1"
-rich = "^13.0.0"
-click-skeleton = "^0.30"
-beartype = "^0.18.0"
-humanize = "^4.0.0"
-python-slugify = "^8.0.0"
-types-python-slugify = "^8.0.0"
-edgedb = "^2.0.0"
-Pygments = "^2.11.2"
-more-itertools = "^10.0.0"
-yt-dlp = "^2024.3.10"
-natsort = "^8.1.0"
-orjson = "^3.8.0"
-ipython = "^8.7.0"
-async-lru = "^2.0.2"
-watchfiles = "^0.22.0"
-textual = "<1.0"
-click = "^8.1.6"
-httpx = "^0.27.0"
-pgcli = "^4.0.0"
-ruamel-yaml = "^0.18.0"
-shazamio = "^0.6"
-psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}
-pyacoustid = "^1.3.0"
-progressbar3 = "^4.3.4"
-yaspin = "^3.0.2"
-pydantic-core = "^2.18.3"
 
 [tool.isort]
 profile = 'black'
@@ -59,23 +59,6 @@ line-length = 180
 
 [tool.ruff]
 lint.ignore = ["E501"]
-
-[tool.poetry.group.dev.dependencies]
-pyright = "^1.1.350"
-coverage-badge = "^1.0"
-restructuredtext_lint = "^1.3.0"
-bump2version = "^1.0.0"
-pylint = "^3.0.0"
-pytest-cov = "^5.0.0"
-pytest-timeout = "^2.0.1"
-flake8 = "^7.0.0"
-mypy = "^1.0"
-isort = "^5.10.1"
-vulture = "^2.3"
-ruff = "<1.0"
-black = "^24.0.0"
-textual-dev = "^1.1.0"
-setuptools = "^70.0.0"
 
 [tool.pyright]
 include = [
@@ -97,7 +80,7 @@ jobs = 4
 ignore-paths = "musicbot/queries"
 [tool.pylint.messages_control]
 disable = """
-method-cache-max-size-none,too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation,too-many-boolean-expressions,use-dict-literal,broad-except
+method-cache-max-size-none,too-few-public-methods,logging-format-interpolation,line-too-long,too-many-arguments,protected-access,missing-docstring,invalid-name,too-many-public-methods,too-many-instance-attributes,duplicate-code,too-many-nested-blocks,too-many-branches,too-many-return-statements,too-many-statements,too-many-locals,too-many-ancestors,abstract-method,anomalous-backslash-in-string,import-outside-toplevel,redefined-outer-name,unnecessary-lambda,c-extension-no-member,logging-fstring-interpolation,too-many-boolean-expressions,use-dict-literal,broad-except,too-many-positional-arguments
 """
 
 [tool.mypy]
@@ -127,3 +110,23 @@ module = [
     "pgcli.*",
 ]
 ignore_missing_imports = true
+
+[tool.uv]
+dev-dependencies = [
+    "black>=24.10.0",
+    "bump2version>=1.0.1",
+    "coverage-badge>=1.1.2",
+    "flake8>=7.1.1",
+    "isort>=5.13.2",
+    "mypy>=1.12.0",
+    "pylint>=3.3.1",
+    "pyright>=1.1.385",
+    "pytest-cov>=5.0.0",
+    "pytest-timeout>=2.3.1",
+    "restructuredtext-lint>=1.4.0",
+    "ruff>=0.6.9",
+    "setuptools>=75.2.0",
+    "textual-dev>=1.6.1",
+    "types-python-slugify>=8.0.2.20240310",
+    "vulture>=2.13",
+]
