--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,41 +2,41 @@
 services:
   musicbot_prod:
     container_name: musicbot-prod
-    image: "edgedb/edgedb:5.7"
+    image: "geldata/gel:6"
     restart: always
     ports:
       - 5656:5656
     environment:
-      EDGEDB_DOCKER_LOG_LEVEL: warning
-      EDGEDB_SERVER_ADMIN_UI: enabled
-      EDGEDB_SERVER_TLS_CERT_MODE: generate_self_signed
-      EDGEDB_SERVER_SECURITY: insecure_dev_mode
-      EDGEDB_SERVER_HTTP_ENDPOINT_SECURITY: optional
-      EDGEDB_SERVER_BINARY_ENDPOINT_SECURITY: optional
-      EDGEDB_SERVER_USER: musicbot
-      EDGEDB_SERVER_PASSWORD: musicbot
+      GEL_DOCKER_LOG_LEVEL: warning
+      GEL_SERVER_ADMIN_UI: enabled
+      GEL_SERVER_TLS_CERT_MODE: generate_self_signed
+      GEL_SERVER_SECURITY: insecure_dev_mode
+      GEL_SERVER_HTTP_ENDPOINT_SECURITY: optional
+      GEL_SERVER_BINARY_ENDPOINT_SECURITY: optional
+      GEL_SERVER_USER: musicbot
+      GEL_SERVER_PASSWORD: musicbot
     volumes:
       - ./dbschema:/dbschema
-      - ./credentials:/root/.config/edgedb/credentials
-      - musicbot-prod-data:/var/lib/edgedb/data
+      - ./credentials:/root/.config/gel/credentials
+      - musicbot-prod-data:/var/lib/gel/data
   musicbot_test:
     container_name: musicbot-test
-    image: "edgedb/edgedb:5.7"
+    image: "geldata/gel:6"
     restart: always
     ports:
       - 5657:5656
     environment:
-      EDGEDB_DOCKER_LOG_LEVEL: debug
-      EDGEDB_SERVER_SECURITY: insecure_dev_mode
-      EDGEDB_SERVER_TLS_CERT_MODE: generate_self_signed
-      EDGEDB_SERVER_ADMIN_UI: enabled
-      EDGEDB_SERVER_USER: testuser
-      EDGEDB_SERVER_PASSWORD: testpass
-      EDGEDB_SERVER_HTTP_ENDPOINT_SECURITY: optional
-      EDGEDB_SERVER_BINARY_ENDPOINT_SECURITY: optional
+      GEL_DOCKER_LOG_LEVEL: debug
+      GEL_SERVER_SECURITY: insecure_dev_mode
+      GEL_SERVER_TLS_CERT_MODE: generate_self_signed
+      GEL_SERVER_ADMIN_UI: enabled
+      GEL_SERVER_USER: testuser
+      GEL_SERVER_PASSWORD: testpass
+      GEL_SERVER_HTTP_ENDPOINT_SECURITY: optional
+      GEL_SERVER_BINARY_ENDPOINT_SECURITY: optional
     volumes:
       - ./dbschema:/dbschema
-      - musicbot-test-data:/var/lib/edgedb/data
+      - musicbot-test-data:/var/lib/gel/data
 
 volumes:
   musicbot-prod-data:
