--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,45 +2,47 @@
 name = "musicbot"
 version = "0.10.0"
 description = "Music swiss army knife"
-# authors = ["Adrien Pensart <crunchengine@gmail.com>"]
+authors = [
+    {name = "Adrien Pensart", email = "crunchengine@gmail.com"}
+]
 # maintainers = ["Adrien Pensart <crunchengine@gmail.com>"]
 # homepage = "https://github.com/AdrienPensart/musicbot"
 license = "MIT"
 readme = "README.rst"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
     "async-lru>=2.0.4",
-    "beartype>=0.19.0",
-    "click>=8.1.7",
-    "click-skeleton>=0.30.1",
+    "beartype>=0.20.0",
+    "click>=8.1.8",
+    "click-skeleton>=0.32.0",
     "colorlog>=6.9.0",
-    "edgedb>=2.2.0",
     "fuzzywuzzy>=0.18.0",
-    "humanize>=4.11.0",
-    "ipython>=8.30.0",
-    "more-itertools>=10.5.0",
+    "humanize>=4.12.1",
+    "ipython>=9.0.1",
+    "more-itertools>=10.6.0",
     "mutagen>=1.47.0",
     "natsort>=8.4.0",
-    "orjson>=3.10.12",
+    "orjson>=3.10.15",
     "pydub>=0.25.1",
-    "pygments>=2.18.0",
-    "python-levenshtein>=0.26.1",
+    "pygments>=2.19.1",
+    "python-levenshtein>=0.27.1",
     "python-slugify>=8.0.4",
     "requests>=2.32.3",
     "rich>=13.9.4",
-    "spotipy>=2.24.0",
-    "textual>=0.89.1",
-    "watchfiles>=1.0.0",
-    "yt-dlp>=2024.12.6",
-    "httpx>=0.28.0",
-    "ruamel-yaml>=0.18.6",
+    "spotipy>=2.25.1",
+    "textual>=2.1.2",
+    "watchfiles>=1.0.4",
+    "yt-dlp>=2025.2.9",
+    "httpx>=0.28.1",
+    "ruamel-yaml>=0.18.10",
     "shazamio>=0.6.0",
-    "psycopg>=3.2.3",
+    "psycopg>=3.2.5",
     "progressbar3>=4.3.4",
     "yaspin>=3.1.0",
     "pydantic-core>=2.24.2",
     "pyacoustid>=1.3.0",
     "pgcli>=4.1.0",
+    "gel>=3.0.1",
 ]
 
 [build-system]
@@ -123,7 +125,7 @@ dev-dependencies = [
     "pyright>=1.1.390",
     "pytest-cov>=6.0.0",
     "pytest-timeout>=2.3.1",
-    "restructuredtext-lint>=1.4.0",
+    "rstcheck>=6.1.2",
     "ruff>=0.8.2",
     "setuptools>=75.6.0",
     "textual-dev>=1.7.0",
